--- a/BYGLocalization.uplugin
+++ b/BYGLocalization.uplugin
@@ -18,7 +18,7 @@
 		{
 			"Name": "BYGLocalization",
 			"Type": "ClientOnlyNoCommandlet",
-			"LoadingPhase": "Default",
+			"LoadingPhase": "PreDefault",
 			"WhitelistPlatforms": [ "Win64", "Mac", "Linux" ]
 		},
 		{
