Major update for 1.0 release
- Improved class naming
- Improved stats window
- Asynchronous updating for stats window
- Plugin now compiles back to 4.22 and up to 5.0

--- a/BYGLocalization.uplugin
+++ b/BYGLocalization.uplugin
@@ -17,13 +17,13 @@
 	"Modules": [
 		{
 			"Name": "BYGLocalization",
-			"Type": "ClientOnlyNoCommandlet",
+			"Type": "Runtime",
 			"LoadingPhase": "PreDefault",
 			"WhitelistPlatforms": [ "Win64", "Mac", "Linux" ]
 		},
 		{
 			"Name": "BYGLocalizationEditor",
-			"Type": "EditorNoCommandlet",
+			"Type": "Editor",
 			"LoadingPhase": "Default"
 		}
 	]
